// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GridTwoColumns /> should correctly when background is setted 1`] = `
.c2 {
  display: grid;
  grid-template-columns: 1fr 2fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 3.2rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4.0rem;
}

.c1 {
  max-width: 120rem;
  margin: 0 auto;
  padding: 3.2rem;
}

.c0 {
  background-color: #FFFFFF;
  color: #0A1128;
  background-color: #0A1128;
  color: #FFFFFF;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  color: #FFFFFF;
  font-size: 6.4rem;
  text-transform: uppercase;
}

.c5 {
  font-size: 2.4rem;
}

@media (max-width:768px) {
  .c2 {
    grid-template-columns: 1fr;
  }
}

@media (max-width:768px) {
  .c3 {
    margin-bottom: 3.2rem;
    text-align: center;
  }
}

@media (max-width:768px) {
  .c4 {
    font-size: 4.0rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <h1
          class="c4"
        >
          Grid two columns title
        </h1>
        <p
          class="c5"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit.
    Nobis adipisci earum accusantium architecto.
    Quo minus odio cum vel, ipsum cumque omnis.
    Obcaecati commodi repellendus fugiat quos est.
    A, similique saepe?
        </p>
      </div>
      <div
        class=""
      >
        <img
          class=""
          src="assets/images/js.svg"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<GridTwoColumns /> should render correctly with default values 1`] = `
.c2 {
  display: grid;
  grid-template-columns: 1fr 2fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 3.2rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4.0rem;
}

.c1 {
  max-width: 120rem;
  margin: 0 auto;
  padding: 3.2rem;
}

.c0 {
  background-color: #FFFFFF;
  color: #0A1128;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  color: #0A1128;
  font-size: 6.4rem;
  text-transform: uppercase;
}

.c5 {
  font-size: 2.4rem;
}

@media (max-width:768px) {
  .c2 {
    grid-template-columns: 1fr;
  }
}

@media (max-width:768px) {
  .c3 {
    margin-bottom: 3.2rem;
    text-align: center;
  }
}

@media (max-width:768px) {
  .c4 {
    font-size: 4.0rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <h1
          class="c4"
        >
          Grid two columns title
        </h1>
        <p
          class="c5"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit.
    Nobis adipisci earum accusantium architecto.
    Quo minus odio cum vel, ipsum cumque omnis.
    Obcaecati commodi repellendus fugiat quos est.
    A, similique saepe?
        </p>
      </div>
      <div
        class=""
      >
        <img
          class=""
          src="assets/images/js.svg"
        />
      </div>
    </div>
  </div>
</div>
`;
